# spotifytops

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  benchmark.yml
devtools/: docker_build.sh  docker_rm.sh  docker_run.sh
src/lib/: config.rs  mod.rs  mru_hashmap.rs  server.rs  spotify_future.rs  throttling_future.rs
src/lib/app/: mod.rs  spotify_login_callback.rs  spotify_tops.rs  state.rs
src/lib/server/: file_server.rs  helpers.rs  mod.rs  response.rs  types.rs
src/lib/spotify/: error_object.rs  minimal_artist.rs  minimal_track.rs  mod.rs  recently_played_request.rs  recently_played_response.rs  retriever.rs  throttling_future.rs  top_artist_response.rs  top_items_request.rs  top_items_retriever.rs  top_track_response.rs  top_tracks_response.rs
src/lib/spotify/auth/: mod.rs  spotify_scopes.rs  token_request.rs  token_response.rs
templates/: recently_played.hbs  top_artists.hbs  top_tracks.hbs  tops.hbs
